# src/modules/teams/teams/dto/mod.rs
@@ -1,5 +1,5 @@
 pub mod request;
 pub mod response;
 
-pub use request::{CreateTeamRequest, TeamQuery, UpdateTeamRequest};
+pub use request::{CreateTeamDTO, UpdateTeamDTO};
 pub use response::TeamResponse;
